[Finish] CMakeLists.txt
As a independent project, can be integrated as a subdirectory directly.
But the library path in the exported target file is not correct, it seems
to be a bug in CMake. To be checked later.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,15 +28,18 @@ project(EES VERSION 1.0
 add_library(EES.Trader INTERFACE)
 add_library(EES::Trader ALIAS EES.Trader)
 
-include(GNUInstallDirs)
+set(EES_INCLUDE_INSTALL_DIR include/EES)
+set(EES_LIB_INSTALL_DIR lib/EES)
+set(EES_CMAKE_INSTALL_DIR lib/cmake/EES)
+
 target_include_directories(EES.Trader
   INTERFACE  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
-             $<INSTALL_INTERFACE:include/EES>
+             $<INSTALL_INTERFACE:${EES_INCLUDE_INSTALL_DIR}>
   )
 
 target_link_libraries(EES.Trader
   INTERFACE  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/lib/libEESTraderApi.so>
-             $<INSTALL_INTERFACE:lib/EES/libEESTraderApi.so>
+             $<INSTALL_INTERFACE:${EES_LIB_INSTALL_DIR}/libEESTraderApi.so>
   )
 
 # Target: Quote
@@ -45,54 +48,79 @@ add_library(EES::Quote ALIAS EES.Quote)
 
 target_include_directories(EES.Quote
   INTERFACE  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
-             $<INSTALL_INTERFACE:include/EES>
+             $<INSTALL_INTERFACE:${EES_INCLUDE_INSTALL_DIR}>
   )
 
 target_link_libraries(EES.Quote
   INTERFACE  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/lib/libEESQuoteApi.so>
-             $<INSTALL_INTERFACE:lib/EES/libEESQuoteApi.so>
+             $<INSTALL_INTERFACE:${EES_LIB_INSTALL_DIR}/libEESQuoteApi.so>
   )
 
 #=================================================================================
 
 # Install : Trader
 install(DIRECTORY include/
-  DESTINATION include/EES
+  DESTINATION ${EES_INCLUDE_INSTALL_DIR}
   FILES_MATCHING PATTERN "EesTrader*.h"
   )
 
 install(FILES lib/libEESTraderApi.so
-  DESTINATION lib/EES
+  DESTINATION ${EES_LIB_INSTALL_DIR}
   )
 
 # Install : Quote
 install(DIRECTORY include/
-  DESTINATION include/EES
+  DESTINATION ${EES_INCLUDE_INSTALL_DIR}
   FILES_MATCHING PATTERN "EESQuote*.h"
   )
 
 install(FILES lib/libEESQuoteApi.so
-  DESTINATION lib/EES
+  DESTINATION ${EES_LIB_INSTALL_DIR}
   )
 
 #=================================================================================
 
-# Packaging : Trader
+# Install export targets
+
 install(TARGETS EES.Trader EXPORT EES_export)
-
 set_target_properties(EES.Trader PROPERTIES EXPORT_NAME Trader)
-# install(EXPORT EES_export
-#   NAMESPACE EES::
-#   FILE EESTargets.cmake
-#   DESTINATION lib/cmake/EES
-#   )
 
-# Packaging : Quote
 install(TARGETS EES.Quote EXPORT EES_export)
-
 set_target_properties(EES.Quote PROPERTIES EXPORT_NAME Quote)
+
+# TODO: library path in export target file is relative path, which is not correct
 install(EXPORT EES_export
   NAMESPACE EES::
   FILE EESTargets.cmake
-  DESTINATION lib/cmake/EES
+  DESTINATION ${EES_CMAKE_INSTALL_DIR}
+  )
+
+#=================================================================================
+
+# Install package config and version files
+
+include(CMakePackageConfigHelpers)
+
+# Package version file
+write_basic_package_version_file(
+  ${CMAKE_CURRENT_BINARY_DIR}/EESConfigVersion.cmake
+  VERSION ${PROJECT_VERSION}
+  COMPATIBILITY SameMajorVersion
+  )
+
+# Package config file
+configure_package_config_file(
+  ${CMAKE_CURRENT_LIST_DIR}/cmake/EESConfig.cmake.in
+  ${CMAKE_CURRENT_BINARY_DIR}/EESConfig.cmake
+  INSTALL_DESTINATION ${EES_CMAKE_INSTALL_DIR}
+  PATH_VARS
+    EES_INCLUDE_INSTALL_DIR
+    EES_LIB_INSTALL_DIR
+  )
+
+# Install the config and version files
+install(FILES
+  ${CMAKE_CURRENT_BINARY_DIR}/EESConfig.cmake
+  ${CMAKE_CURRENT_BINARY_DIR}/EESConfigVersion.cmake
+  DESTINATION ${EES_CMAKE_INSTALL_DIR}
   )
